--- a/Views/Admin/ApprovalLevel.cshtml
+++ b/Views/Admin/ApprovalLevel.cshtml
@@ -107,11 +107,24 @@
                                             @Html.TextBoxFor(m => m.ApprovalLevelModels.LevelValue,
                                              new
                                              {
-                                                 @class = "form-control text-uppercase",
+                                                 @class = "form-control onlynumdec",
                                                  placeholder = "Enter " + @Html.DisplayNameFor(m => m.ApprovalLevelModels.LevelValue)
                                              })
-                                                                            @Html.ValidationMessageFor(m => m.ApprovalLevelModels.LevelValue, "",
-                                             new { @class = "text-danger" })
+                                            @Html.ValidationMessageFor(m => m.ApprovalLevelModels.LevelValue, "",
+             new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.ApprovalLevelModels.LevelMargin, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.ApprovalLevelModels.LevelMargin,
+                                             new
+                                             {
+                                                 @class = "form-control onlynumdec",
+                                                 placeholder = "Enter " + @Html.DisplayNameFor(m => m.ApprovalLevelModels.LevelMargin)
+                                             })
+                                            @Html.ValidationMessageFor(m => m.ApprovalLevelModels.LevelMargin, "",
+             new { @class = "text-danger" })
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -186,8 +199,9 @@
                                         <th>SNo.</th>
                                         <th>Action</th>
                                         <th>@Html.DisplayNameFor(model => model.ApprovalLevelModelList.FirstOrDefault().Level1)</th>
-                                        <th>@Html.DisplayNameFor(model => model.ApprovalLevelModelList.FirstOrDefault().LevelValue)</th>
                                         <th>@Html.DisplayNameFor(model => model.ApprovalLevelModelList.FirstOrDefault().Level2)</th>
+                                        <th>@Html.DisplayNameFor(model => model.ApprovalLevelModelList.FirstOrDefault().LevelValue)</th>
+                                        <th>@Html.DisplayNameFor(model => model.ApprovalLevelModelList.FirstOrDefault().LevelMargin)</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -197,10 +211,11 @@
                                             <td></td>
                                             <td>
                                                 @Html.EncodedActionLink("<i class='fa fa-pencil-square-o'></i>", "EditApprovalLevel", "Admin", new { id = u.Id }, new { @class = "btn btn-edt bg-aqua", title = "Edit" })
-                                               </td>
+                                            </td>
                                             <td>@Html.DisplayFor(modelApprovalLevel => u.Level1) </td>
-                                            <td>@Html.DisplayFor(modelApprovalLevel => u.LevelValue) </td>
                                             <td>@Html.DisplayFor(modelApprovalLevel => u.Level2) </td>
+                                            <td>@Html.DisplayFor(modelApprovalLevel => u.LevelValue) </td>
+                                            <td>@Html.DisplayFor(modelApprovalLevel => u.LevelMargin) </td>
                                         </tr>
                                     }
                                 </tbody>
