--- a/Views/Admin/POApprove.cshtml
+++ b/Views/Admin/POApprove.cshtml
@@ -38,16 +38,16 @@
                             @if (Model.UserProfileModels.EmpType != "User")
                             {
                                 @*<a href="javascript:void(0)" class="btn bg-aqua poapprove" id="poapprove">Approve</a>
-                                <a href="javascript:void(0)" class="btn bg-red float-right ponotapprove" id="ponotapprove">Not Approve</a>*@
+                                    <a href="javascript:void(0)" class="btn bg-red float-right ponotapprove" id="ponotapprove">Not Approve</a>*@
                                 <div class="col-md-4">
                                     <a href="javascript:void(0)" class="btn bg-aqua poapprove" id="poapprove">Approve</a>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="col-md-8">
-                                        <textarea class="float-right form-control napprmk" placeholder = "Enter Not Approval Remarks"></textarea>
+                                        <textarea class="float-right form-control napprmk" placeholder="Enter Not Approval Remarks"></textarea>
                                     </div>
                                     <div class="col-md-4 float-right">
-                                    <a href="javascript:void(0)" class="btn bg-red btn-edt float-right ponotapprove" id="ponotapprove">Not Approve</a>
+                                        <a href="javascript:void(0)" class="btn bg-red btn-edt float-right ponotapprove" id="ponotapprove">Not Approve</a>
                                     </div>
                                 </div>
                             }
@@ -114,51 +114,94 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POSourcedBy)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POGenerateBy)</th>
                                     @*@if (Model.UserProfileModels.EmpType != "User")
-                                    {
-                                        <th>Not Approved</th>
-                                    }*@
+                                        {
+                                            <th>Not Approved</th>
+                                        }*@
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td>
-                                            @if (item.POGDate == "01/01/1900")
-                                            {
-
-                                            }
-                                            else
-                                            {
-                                                @Html.DisplayFor(modelItem => item.POGDate)
-                                            }
-                                        </td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
-                                        </td>
-                                        <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POAssignBy)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POSourcedBy)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POGenerateBy)</td>
-                                        @*@if (Model.UserProfileModels.EmpType != "User")
-                                        {
+                                    if (item.Level1App != null)
+                                    {
+                                        <tr class="pen-tbl-row">
+                                            <td></td>
+                                            <td></td>
                                             <td>
-                                                @Html.EncodedActionLink("<i class='fa fa-times'></i>", "PONotApproved", "Admin",
-                                                    new { id = item.VPONumber }, new { @class = "btn btn-edt bg-red btn-sm", title = "PO Not Approved" })
+                                                @if (item.POGDate == "01/01/1900")
+                                                {
+
+                                                }
+                                                else
+                                                {
+                                                    @Html.DisplayFor(modelItem => item.POGDate)
+                                                }
                                             </td>
-                                        }*@
-                                    </tr>
+                                            <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                            <td>
+                                                @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
+                                            </td>
+                                            <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POAssignBy)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POSourcedBy)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POGenerateBy)</td>
+                                            @*@if (Model.UserProfileModels.EmpType != "User")
+                                                {
+                                                    <td>
+                                                        @Html.EncodedActionLink("<i class='fa fa-times'></i>", "PONotApproved", "Admin",
+                                                            new { id = item.VPONumber }, new { @class = "btn btn-edt bg-red btn-sm", title = "PO Not Approved" })
+                                                    </td>
+                                                }*@
+                                        </tr>
+                                    }
+                                    else
+                                    {
+                                        <tr>
+                                            <td></td>
+                                            <td></td>
+                                            <td>
+                                                @if (item.POGDate == "01/01/1900")
+                                                {
+
+                                                }
+                                                else
+                                                {
+                                                    @Html.DisplayFor(modelItem => item.POGDate)
+                                                }
+                                            </td>
+                                            <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                            <td>
+                                                @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
+                                            </td>
+                                            <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POAssignBy)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POSourcedBy)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.POGenerateBy)</td>
+                                            @*@if (Model.UserProfileModels.EmpType != "User")
+                                                {
+                                                    <td>
+                                                        @Html.EncodedActionLink("<i class='fa fa-times'></i>", "PONotApproved", "Admin",
+                                                            new { id = item.VPONumber }, new { @class = "btn btn-edt bg-red btn-sm", title = "PO Not Approved" })
+                                                    </td>
+                                                }*@
+                                        </tr>
+                                    }
                                 }
                             </tbody>
                         </table>
