--- a/Views/Admin/MaterialPickup.cshtml
+++ b/Views/Admin/MaterialPickup.cshtml
@@ -113,7 +113,7 @@
                                     <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
                                     <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                    @if (Model.UserProfileModels.EmpType != "User")
+                                    @if (Model.UserProfileModels.EmpType == "Administrator" || Model.UserProfileModels.EmpType == "SupAdmin" || Model.UserProfileModels.IsAdminRight == true)
                                     {
                                         <td>
                                             @Html.EncodedActionLink("Receive", "MaterialReceive", "Admin",
