--- a/Views/Admin/PRApproval.cshtml
+++ b/Views/Admin/PRApproval.cshtml
@@ -35,7 +35,7 @@
                     <!-- /.box-body -->
                     <div class="box-body">
                         <div class="col-md-12">
-                            @if (Model.UserProfileModels.EmpType != "User")
+                            @if (Model.UserProfileModels.EmpType == "Administrator" || Model.UserProfileModels.EmpType == "SupAdmin" || Model.UserProfileModels.IsAdminRight == true)
                             {
                                 <a href="javascript:void(0)" class="btn bg-aqua prapprove" id="prapprove">Approve</a>
                             }
