--- a/Views/Admin/QuotationApprove.cshtml
+++ b/Views/Admin/QuotationApprove.cshtml
@@ -35,19 +35,19 @@
                     <!-- /.box-body -->
                     <div class="box-body">
                         <div class="col-md-12">
-                            @if (Model.UserProfileModels.EmpType != "User")
+                            @if (Model.UserProfileModels.EmpType == "Administrator" || Model.UserProfileModels.EmpType == "SupAdmin" || Model.UserProfileModels.IsAdminRight == true)
                             {
                                 @*<a href="javascript:void(0)" class="btn bg-aqua poapprove" id="poapprove">Approve</a>
-                                <a href="javascript:void(0)" class="btn bg-red float-right ponotapprove" id="ponotapprove">Not Approve</a>*@
+            <a href="javascript:void(0)" class="btn bg-red float-right ponotapprove" id="ponotapprove">Not Approve</a>*@
                                 <div class="col-md-4">
                                     <a href="javascript:void(0)" class="btn bg-aqua quotapprove" id="quotapprove">Approve</a>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="col-md-8">
-                                        <textarea class="float-right form-control napprmk" placeholder = "Enter Not Approval Remarks"></textarea>
+                                        <textarea class="float-right form-control napprmk" placeholder="Enter Not Approval Remarks"></textarea>
                                     </div>
                                     <div class="col-md-4 float-right">
-                                    <a href="javascript:void(0)" class="btn bg-red btn-edt float-right quotnotapprove" id="quotnotapprove">Not Approve</a>
+                                        <a href="javascript:void(0)" class="btn bg-red btn-edt float-right quotnotapprove" id="quotnotapprove">Not Approve</a>
                                     </div>
                                 </div>
                             }
