--- a/Views/Admin/RequestPayment.cshtml
+++ b/Views/Admin/RequestPayment.cshtml
@@ -152,7 +152,7 @@
                                             <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
-                                                @if (Model.UserProfileModels.EmpType != "User")
+                                                @if (Model.UserProfileModels.EmpType == "Administrator" || Model.UserProfileModels.EmpType == "SupAdmin" || Model.UserProfileModels.IsAdminRight == true)
                                                 {
                                                     @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
                                                                   new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
@@ -200,9 +200,12 @@
                                             <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
-                                                @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                         new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                            </td>
+                                                @if (Model.UserProfileModels.EmpType == "Administrator" || Model.UserProfileModels.EmpType == "SupAdmin" || Model.UserProfileModels.IsAdminRight == true)
+                                                {
+                                                    @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
+                                                                  new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                                }
+                                                </td>
                                         </tr>
                                     }
                                     else
@@ -245,9 +248,12 @@
                                             <td> @Html.DisplayFor(modelItem => item.POAssignTo) </td>
                                             <td> @Html.DisplayFor(modelItem => item.Status) </td>
                                             <td>
-                                                @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                         new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                            </td>
+                                                @if (Model.UserProfileModels.EmpType == "Administrator" || Model.UserProfileModels.EmpType == "SupAdmin" || Model.UserProfileModels.IsAdminRight == true)
+                                                {
+                                                    @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
+                                                                  new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                                }
+                                                </td>
                                         </tr>
                                     }
                                 }
