--- a/Views/Admin/POPayment.cshtml
+++ b/Views/Admin/POPayment.cshtml
@@ -35,7 +35,7 @@
         @Html.AntiForgeryToken()
         <!-- Main row -->
         <div class="row">
-            @if (Model.UserProfileModels.EmpType != "User")
+            @if (Model.UserProfileModels.EmpType == "Administrator" || Model.UserProfileModels.EmpType == "SupAdmin" || Model.UserProfileModels.IsAdminRight == true)
             {
                 <div class="col-lg-12">
                     <!-- Default box -->
