Customer Report Add

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -2,6 +2,7 @@
 @model Vendor_Indusuno.ViewModels.IndexViewModel
 @{
     ViewBag.Title = "Home";
+    TempData["Dashboard"] = "active";
     TempData["Index"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
