--- a/Views/Admin/POMargin.cshtml
+++ b/Views/Admin/POMargin.cshtml
@@ -2,7 +2,8 @@
 @model Vendor_Indusuno.ViewModels.POMarginViewModel
 @{
     ViewBag.Title = "PO Margin";
-    TempData["Index"] = "active";
+    TempData["Reports"] = "active";
+    TempData["POMargin"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
