Now Customer Report is working fine

--- a/Views/Admin/POReport.cshtml
+++ b/Views/Admin/POReport.cshtml
@@ -110,7 +110,7 @@
                     </div>
                     <!-- /.box-body -->
                     <div class="box-body">
-                        <table id="tblpurchaseorder" class="table table-bordered display">
+                        <table id="tblporeport" class="table table-bordered display">
                             <thead>
                                 <tr>
                                     <th>SNo</th>
