Index Delivery 7 Days

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -178,18 +178,29 @@
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="box box-widget widget-user-2">
                             <div class="widget-user-header bg-aqua-active p-10">
-                                <h3 class="widget-user-username m-l-0">Purchase Order</h3>
-                                <h5 class="widget-user-desc m-l-0">Pending, Delivery</h5>
+                                <h3 class="widget-user-username m-l-0">Delivery</h3>
+                                <h5 class="widget-user-desc m-l-0">Pending</h5>
                             </div>
+                            <!--<div class="box-footer no-padding">
+                            <ul class="nav nav-stacked">
+                                <li><a href="#">Due Date Passed <span class="badge bg-blue">@Model.PODeliveryCountModels.OLastYearValueP</span><span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OLastYearValueD</span></a></li>
+                                <li><a href="#">Next Seven Days <span class="badge bg-blue">@Model.PODeliveryCountModels.OLastMonthValueP</span><span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OLastMonthValueD</span></a></li>-->
+                            @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
+                            <!--<li><a href="#">Next Fifteen Days <span class="badge bg-blue">@Model.PODeliveryCountModels.OYesterdayValueP</span><span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OYesterdayValueD</span></a></li>
+                            <li><a href="#">Next Thirty Days <span class="badge bg-green">@Model.PODeliveryCountModels.OTodayValueP</span><span class="pull-right badge bg-green">@Model.PODeliveryCountModels.OTodayValueD</span></a></li>
+                            <li><a href="#">Current Month <span class="badge bg-red">@Model.PODeliveryCountModels.OCMonthValueP</span><span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCMonthValueD</span></a></li>
+                            <li><a href="#">Current Year <span class="badge bg-red">@Model.PODeliveryCountModels.OCYearValueP</span><span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCYearValueD</span></a></li>-->
+                            @*<li><a href="#">Total <span class="badge bg-red">@Model.POCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.POCountModels.OTotalValue</span></a></li>*@
+                            <!--</ul>
+                            </div>-->
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.PODeliveryCountModels.OLastYearValueP</span><span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OLastYearValueD</span></a></li>
-                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.PODeliveryCountModels.OLastMonthValueP</span><span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OLastMonthValueD</span></a></li>
-                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
-                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.PODeliveryCountModels.OYesterdayValueP</span><span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OYesterdayValueD</span></a></li>
-                                    <li><a href="#">Today <span class="badge bg-green">@Model.PODeliveryCountModels.OTodayValueP</span><span class="pull-right badge bg-green">@Model.PODeliveryCountModels.OTodayValueD</span></a></li>
-                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.PODeliveryCountModels.OCMonthValueP</span><span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCMonthValueD</span></a></li>
-                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.PODeliveryCountModels.OCYearValueP</span><span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCYearValueD</span></a></li>
+                                    <li><a href="#">Due Date Passed <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OLastYearValueP</span></a></li>
+                                    <li><a href="#">Next Seven Days <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.ONext7DaysP</span></a></li>
+                                    <li><a href="#">Next Fifteen Days <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OYesterdayValueD</span></a></li>
+                                    <li><a href="#">Next Thirty Days <span class="pull-right badge bg-green">@Model.PODeliveryCountModels.OTodayValueD</span></a></li>
+                                    <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCMonthValueD</span></a></li>
+                                    <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCYearValueD</span></a></li>
                                     @*<li><a href="#">Total <span class="badge bg-red">@Model.POCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.POCountModels.OTotalValue</span></a></li>*@
                                 </ul>
                             </div>
