--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -196,9 +196,9 @@
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
                                     <li><a href="#">Due Date Passed <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OLastYearValueP</span></a></li>
-                                    <li><a href="#">Next Seven Days <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.ONext7DaysP</span></a></li>
-                                    <li><a href="#">Next Fifteen Days <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.OYesterdayValueD</span></a></li>
-                                    <li><a href="#">Next Thirty Days <span class="pull-right badge bg-green">@Model.PODeliveryCountModels.OTodayValueD</span></a></li>
+                                    <li><a href="#">Next 7 Days <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.ONext7DaysValueP</span></a></li>
+                                    <li><a href="#">Next 15 Days <span class="pull-right badge bg-blue">@Model.PODeliveryCountModels.ONext15DaysValueP</span></a></li>
+                                    <li><a href="#">Next 30 Days <span class="pull-right badge bg-green">@Model.PODeliveryCountModels.ONext30DaysValueP</span></a></li>
                                     <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCMonthValueD</span></a></li>
                                     <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.PODeliveryCountModels.OCYearValueD</span></a></li>
                                     @*<li><a href="#">Total <span class="badge bg-red">@Model.POCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.POCountModels.OTotalValue</span></a></li>*@
