--- a/Views/Admin/POReport.cshtml
+++ b/Views/Admin/POReport.cshtml
@@ -121,6 +121,7 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Product)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Brand)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().ModelNo)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POType)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Quantity)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Price)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Discount)</th>
@@ -135,31 +136,32 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>
-                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
-                                        </td>
-                                        <td>
-                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
-                                        </td>
-                                        <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td title="@item.SpcRemark">
-                                            @Html.DisplayFor(modelItem => item.Product)<br>
-                                        </td>
-                                        <td>@Html.DisplayFor(modelItem => item.Brand)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.ModelNo)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Discount)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.GST)%</td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.ExpDlvDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
-                                    </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    <td>
+                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
+                                    </td>
+                                    <td>
+                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.POPId)</td>
+                                    <td title="@item.SpcRemark">
+                                        @Html.DisplayFor(modelItem => item.Product)<br>
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.Brand)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.ModelNo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POType)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Discount)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.GST)%</td>
+                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.ExpDlvDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
