--- a/Views/Admin/VenSourced.cshtml
+++ b/Views/Admin/VenSourced.cshtml
@@ -92,18 +92,36 @@
                             <tbody>
                                 @foreach (var item in Model.VenSourceModelList)
                                 {
-                                <tr>
-                                    <td></td>
-                                    <td>@Html.DisplayFor(modelItem => item.SourcedDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnqPId)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.VSNo)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Vendor)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnqAssignTo)</td>
-                                    <td>
-                                        @Html.EncodedActionLink("Send", "SendVendorEnquiryEmail", "Admin", new { id = item.VSNo }, new { @class = "", title = "Edit", @target = "_blank" })
-                                    </td>
-                                    <td>@Html.DisplayFor(modelItem => item.EmailSend)</td>
-                                </tr>
+                                    string aText = "Waiting for Approval";
+                                    string lvlApp = "Approved";
+                                    <tr>
+                                        <td></td>
+                                        <td>@Html.DisplayFor(modelItem => item.SourcedDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnqPId)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.VSNo)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Vendor)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnqAssignTo)</td>
+                                        <td>
+                                            @Html.EncodedActionLink("Approve", "ApproveVendorEnquiryEmail", "Admin", new { id = item.VSNo }, new { @class = "", title = "Approve", @target = "_blank" })
+                                            @*@if (item.IsApproved == "A" && Model.IsLevelUser == "Y")
+                                            {
+                                                @lvlApp
+                                            }
+                                            else if (item.IsApproved == "NA" && Model.IsLevelUser == "Y")
+                                            {
+                                                @Html.EncodedActionLink("Approve", "ApproveVendorEnquiryEmail", "Admin", new { id = item.VSNo }, new { @class = "", title = "Approve", @target = "_blank" })
+                                            }
+                                            else if (item.IsApproved == "A" && Model.IsLevelUser != "Y")
+                                            {
+                                                @Html.EncodedActionLink("Send", "SendVendorEnquiryEmail", "Admin", new { id = item.VSNo }, new { @class = "", title = "Edit", @target = "_blank" })
+                                            }
+                                            else
+                                            {
+                                                @aText
+                                            }*@
+                                        </td>
+                                        <td>@Html.DisplayFor(modelItem => item.EmailSend)</td>
+                                    </tr>
                                 }
                             </tbody>
                         </table>
