Customer Report Percent of on time Delivery

--- a/Views/Admin/WeeklyCustomerReport.cshtml
+++ b/Views/Admin/WeeklyCustomerReport.cshtml
@@ -125,7 +125,7 @@
                                     <td>@Html.DisplayFor(modelItem => item.TAT)</td>
                                     <td>@Html.DisplayFor(modelItem => item.POReceived)</td>
                                     <td>@Html.DisplayFor(modelItem => item.POValue)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Delivery)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Delivery) %</td>
                                     <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                 </tr>
                                 }
